# Corrective-RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
data/: loaders.py
entire_pipeline/: Corrective_RAG.py
llm/: generator.py  grader.py  rewriter.py
notebook/: Corrective_RAG.ipynb
retriever/: retrieval.py  vectorstore.py
utils/: formatting.py  search.py
workflow/: graph.py  nodes.py  state.py
